--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <input type="text" placeholder="Enter Pokemon name" id="pkmnName">
         <button onclick="pkmnFetch();" id="fetch">Fetch</button>
         <button onclick="pkmnShinyFetch()" id="shiny">Shiny Fetch</button>
+        <ul id="suggestions"></ul>
     </div>
     <p id="nameInApi"></p>
     <p id="id"></p>
