Tried adding a UI

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Gotta catch 'em all!!</h1>
+    <div id="header">
+        <h1 id="heading">Gotta catch 'em all!!</h1>
+    </div>
+    <p id="home">HOME</p>
     <div class="search">
         <input type="text" placeholder="Enter Pokemon name" id="pkmnName">
         <button onclick="pkmnFetch();" id="fetch">Fetch</button>
@@ -123,7 +126,6 @@
     <p id="next">&gt;</p>
     <p id="back">&lt;</p>
     <p id="error"></p>
-    <p id="home">HOME</p>
 
     <script src="script.js"></script>
 </body>
